--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,12 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = ["lxml>=5.3.0", "beautifulsoup4>=4.12.3", "requests>=2.32.3", "python-dotenv>=1.0.1"]
+dependencies = [
+  "lxml>=5.3.0",
+  "tqdm",
+  "requests>=2.32.3",
+  "python-dotenv>=1.0.1",
+]
 
 [project.urls]
 Documentation = "https://github.com/Alexander Rusakevich/ramonak#readme"
