--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ build-backend = "hatchling.build"
 [project]
 name = "ramonak"
 dynamic = ["version"]
-description = ''
+description = 'Універсальная бібліятэка па працы з тэкстам на беларускай мове для Python'
 readme = "README.md"
-requires-python = ">=3.8"
-license = "MIT"
+requires-python = ">=3.11"
+license = "LGPL-3.0"
 keywords = []
 authors = [
   { name = "Alexander Rusakevich", email = "mr.alexander.rusakevich@gmail.com" },
@@ -22,7 +22,7 @@ classifiers = [
 ]
 dependencies = [
   "lxml>=5.3.0",
-  "tqdm",
+  "tqdm>=4.67.1",
   "requests>=2.32.3",
   "python-dotenv>=1.0.1",
 ]
@@ -31,9 +31,9 @@ dependencies = [
 exclude = [".env.dev"]
 
 [project.urls]
-Documentation = "https://github.com/Alexander Rusakevich/ramonak#readme"
-Issues = "https://github.com/Alexander Rusakevich/ramonak/issues"
-Source = "https://github.com/Alexander Rusakevich/ramonak"
+Documentation = "https://github.com/alex-rusakevich/ramonak#readme"
+Issues = "https://github.com/alex-rusakevich/ramonak/issues"
+Source = "https://github.com/alex-rusakevich/ramonak"
 
 [tool.hatch.version]
 path = "src/ramonak/__about__.py"
