#patch sphinx support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,10 +66,10 @@ exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 ignore = ["RUF001", "T201", "RUF002"]
 
 [tool.hatch.envs.docs]
-dependencies = ["pdoc3"]
+dependencies = ["sphinx"]
 
 [tool.hatch.envs.docs.scripts]
-generate = "pdoc -c 'docformat=\"numpy\"' --force --output-dir=docs ."
+generate = "cd docs && sphinx-apidoc -o . ../src/ramonak && make html && cd .."
 
 [tool.hatch.envs.hatch-test]
 parallel = true
