--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,14 +62,23 @@ tests = ["tests", "*/ramonak/tests"]
 [tool.coverage.report]
 exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 
+[tool.ruff]
+extend-exclude = ["tests", "docs", "__about__.py"]
+
 [tool.ruff.lint]
+select = ["D"]
 ignore = ["RUF001", "T201", "RUF002"]
 
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
+
 [tool.hatch.envs.docs]
-dependencies = ["sphinx"]
+dependencies = ["sphinx", "sphinx-book-theme"]
 
 [tool.hatch.envs.docs.scripts]
 generate = "cd docs && sphinx-apidoc -o . ../src/ramonak && make html && cd .."
+server = "cd docs/_build/html && python -m http.server 8089 && cd ../../../"
+coverage = "cd docs && cross-env SPHINX_APIDOC_OPTIONS=members sphinx-apidoc -o . ../src/ramonak && sphinx-build -v -b coverage . ./_build/coverage && cd .."
 
 [tool.hatch.envs.hatch-test]
 parallel = true
