--- a/.github/workflows/build-pypi-pkg.yml
+++ b/.github/workflows/build-pypi-pkg.yml
@@ -1,4 +1,4 @@
-name: Hatch Checks
+name: Build PyPI package
 
 on:
   push:
@@ -35,3 +35,11 @@ jobs:
       - name: Run tests in the test folder
         run: |
           hatch test
+
+          - name: Build Package
+          run: hatch build
+  
+      - name: Publish Package
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: hatch publish --token $PYPI_TOKEN
