#patch workflow fix

--- a/.github/workflows/build-pypi-pkg.yml
+++ b/.github/workflows/build-pypi-pkg.yml
@@ -36,8 +36,9 @@ jobs:
         run: |
           hatch test
 
-          - name: Build Package
-          run: hatch build
+      - name: Build Package
+        run: |
+          hatch build
   
       - name: Publish Package
         env:
