--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  prepare:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +23,18 @@ jobs:
       - name: Install dependencies
         run: |
           pip install hatch
-
+  build:
+    runs-on: ubuntu-latest
+    needs: prepare
+    steps:
       - name: Build Sphinx documentation
         run: |
           hatch run docs:build
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
