--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,16 +1,17 @@
-name: Deploy Sphinx Docs to GitHub Pages
+name: Deploy Sphinx Docs
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  workflow_dispatch:
+    types:
+      - closed
 
 jobs:
-  prepare:
+  build-deploy-docs:
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
@@ -23,18 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install hatch
-  build:
-    runs-on: ubuntu-latest
-    needs: prepare
-    steps:
+
       - name: Build Sphinx documentation
         run: |
           hatch run docs:build
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
